Pro 1.0.17
==========

Fixes:
 - Fixed : Orange selection indicator around grid not correctly sized (MODELER-356)

Pro 1.0.16
==========

Fixes:
 - Push code from Controller to Service layer (MODELER-443)
 - Fixed: Text centering in a label is not triggered by changes in size or text (MODELER-400)
 - Fixed: Cannot unset username and/or password of web view widget (MODELER-542)
 - Fixed: Panel.xml not correcty generated for widgets with switch sensors (MODELER-552)

Pro 1.0.15
==========

Fixes:
 - Fixed: Panel.xml not correcty generated for widgets with custom sensors (MODELER-551)

Pro 1.0.14
==========

Fixes:
 - ResourceServiceImpl.initResources Should Be Internalized as Part of LocalFileCache Implementation (MODELER-287)
 - Rework populate / resolve DTO references (MODELER-452)
 - Fixed: Controller and panel XML files incorrectly generated after MODELER-452 changes (MODELER-480)
 - Fixed: Display errors in device tree, commands not appearing in sensor or switch details (MODELER-500)
 - Add/review unit tests around UI components equality and controller/panel XML generation (MODELER-496)
 - Adapt unit tests to pass with changes made in MODELER-500 (MODELER-501)
 - Fixed: When using arrow keys to move selection, browser window is scrolled first (MODELER-309)
 - Fixed: Username label is displayed on top of input field instead of to its left (MODELER-547)

New features: 
 - In addition to version number, display SVN revision number in version string (MODELER-529)

Pro 1.0.13
==========

Fixes:
 - Fixed tests (testng) exection from ant script (MODELER-438)
 - Finish review of methods for DTO <-> Model objects conversion (MODELER-405)
 - Refactor walking the UIComponent objects within a panels collection (MODELER-437)
 - Fixed: walking functionality from MODELER-437 iterates multiple times over the same component (MODELER-497)
 - Implement unit tests proving MODELER-497 (MODELER-498)